# xpuz

./: .gitignore  .prettierrc.js  .readthedocs.yaml  CONTRIBUTING.md  Gulpfile.js  LICENSE.md  MANIFEST.in  Makefile  README.md  RENAMED.md  crossword_generator.py  devdeps.txt  mkdocs.yml  package.json  pyproject.toml  quickstart-posix.sh  quickstart-win.bat  requirements.txt  runatschool.bat  setup.py  test.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  tox-tests.yml
crossword_puzzle/: __dev.py  __init__.py  _locale_utils.py  _translation_utils.py  base.py  config.ini  constants.py  crossword.py  custom_types.py  cword_gen.py  definitions_parser.py  errors.py  import_export.py  locale_utils.py  main.py  pdf.py  td.py  template.config.ini  translation_utils.py  utils.py  version.py  wrappers.py
crossword_puzzle/cword_webapp/: app.py
crossword_puzzle/data/: attempts_db.json
crossword_puzzle/locales/: base.pot
crossword_puzzle/pages/: __init__.py  browser.py  editor.py  home.py
docs/: credits.md  faq.md  gallery.md  index.md  installation.md  license.md  troubleshooting.md  user_guide.md
docs/scripts/: gen_credits.py  gen_ref_nav.py
locales/: base.pot
src/: babel.cfg  config.ini  constants.py  custom_types.py  cword_gen.py  definitions_parser.py  errors.py  locale_utils.py  main.py  translation_utils.py
src/cword_webapp/: app.py
xpuz/: __main__.py  base.py  constants.py  crossword.py  import_export.py  ipuz.py  main.py  pdf.py  td.py  template.config.ini  utils.py  version.py  wrappers.py
(+6564 files in other folders)
